--- a/new.html
+++ b/new.html
@@ -2,21 +2,21 @@
 <html>
 <head>
     <title>HI PEOPLE</title>
-    <link rel='stylesheet' href='/stylesheets/style.css' />
+    <script src="/socket.io/socket.io.js"></script>
 </head>
 <body>
 <h1>HI PEOPLE</h1>
 <p>Welcome to my first page</p>
 
-<%-body%>
-
-<script src="/socket.io/socket.io.js"></script>
 <script>
     var socket = io.connect('http://localhost');
+    alert('finish');
     socket.on('news', function (data) {
         console.log(data);
         socket.emit('my other event', { my: 'data' });
+
     });
+
 </script>
 
 </body>
