--- a/new.html
+++ b/new.html
@@ -1,4 +1,57 @@
-<!DOCTYPE html>
+ <!DOCTYPE html>
+<html>
+<head>
+    <title>HI PEOPLE</title>
+</head>
+<body>
+<h1>HI PEOPLE</h1>
+<p>Welcome to my first page</p>
+
+<form>
+    <table id="zakazTable">
+        <tr>
+            <td>
+                <input type="text" value="" id="login">
+            </td>
+        </tr>
+        <tr>
+            <td>
+                <input type="text" value="" id="password">
+            </td>
+        </tr>
+        <tr>
+            <td>
+                <input type="button" value="Зарегистрироваться" onclick="somefunc()">
+                <input type="button" value="Отмена">
+            </td>
+        </tr>
+    </table>
+    </table>
+    <div id="zayavka"></div>
+</form>
+
+
+<script>
+    function somefunc(){
+        var inf = document.getElementById("login").value;
+        console.log("!!!!!!!!!!!!!!!!!!!!" + inf);
+        alert(inf);
+    }
+
+</script>
+
+</body>
+</html>
+
+
+
+
+
+
+
+
+
+<!-- <!DOCTYPE html>
 <html>
 <head>
     <title>HI PEOPLE</title>
@@ -21,3 +74,5 @@
 
 </body>
 </html>
+
+-->
